fix icon and text colliding on narrow screens

--- a/_sass/components/_icon.scss
+++ b/_sass/components/_icon.scss
@@ -49,8 +49,6 @@
 
 		&.left,
 		&.right {
-			max-width: 30%;
-
 			img {
 				width: 100%;
 			}
